testdata/baselines/reference/submodule/conformance/inferThis.errors.txt
/a.js(1,17): error TS8004: Type parameter declarations can only be used in TypeScript files.
/a.js(9,6): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== /a.js (2 errors) ====
    export class C {
                    
        /**
    ~~~~~~~
         * @template T
    ~~~~~~~~~~~~~~~~~~
         * @this {T}
    ~~~~~~~~~~~~~~~~
         * @return {T}
    ~~~~~~~~~~~~~~~~~~
         */
    ~~~~~~~
        static a() {
    ~~~~~~~~~~~~~~~~
            return this;
    ~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
         
    
    
        /**
    ~~~~~~~
         * @template T
    ~~~~~~~~~~~~~~~~~~
         * @this {T}
    ~~~~~~~~~~~~~~~~
         * @return {T}
    ~~~~~~~~~~~~~~~~~~
         */
    ~~~~~~~
        b() {
    ~~~~~~~~~
            return this;
    ~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    }
    
    const a = C.a();
    a; // typeof C
    
    const c = new C();
    const b = c.b();
    b; // C
    